--- a/README.org
+++ b/README.org
@@ -1,19 +1,31 @@
 # WowGarrisonTracker
 
+*  Whats is this all about?
+
+    This project is supposed to help people who make money from garrison. It have few convinient features that can substitute Excel and the undermine journal (of course if you like to track how much money and resources you get).
+
+* What I can offer?
+
+    |-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+    | Resources tracking    | You can track how much 'Garrison Resources' and 'War Paint' you earn each day on each character                                                                                                |
+    | Card of Omen openings | My Main income from garrison was opening 'Cards of Omen' so you can also track it here. You simply insert how many cards you have to open, gold you had before opening and gold after opening. |
+    | Your characters       | Tracking resources wouldn't be possible without this page. Here you can add new characters and, you can see how much total resources you earned on each character.                             |
+    |                       |                                                                                                                                                                                                |
+
 *   Enviromental Variables
 
 ** client.id
 
- !IMPORTANT. sets your Blizzard client id. You need to set it!
+Sets your Blizzard client id. You need to set it!
 
 ** client.secret
 
- !IMPORTANT. Sets your Blizzard client secret. Same as id you need to set it
+Sets your Blizzard client secret. Same as id you need to set it
 
 ** email.login
 
- !IMPORTANT. Currently im not offering any build in email so you need to set one yourself. Most likely will be changed in future
+Currently im not offering any build in email so you need to set one yourself. Most likely will be changed in future
 
 ** email.password
 
- !IMPORTANT. same as login
+Sets email password.
