--- a/README.org
+++ b/README.org
@@ -10,7 +10,9 @@
     | Resources tracking    | You can track how much 'Garrison Resources' and 'War Paint' you earn each day on each character                                                                                                |
     | Card of Omen openings | My Main income from garrison was opening 'Cards of Omen' so you can also track it here. You simply insert how many cards you have to open, gold you had before opening and gold after opening. |
     | Your characters       | Tracking resources wouldn't be possible without this page. Here you can add new characters and, you can see how much total resources you earned on each character.                             |
-    |                       |                                                                                                                                                                                                |
+    | Statistics            | Here you can see your statistics. Things like total 'Garrison Resources', 'War Paint', total gold from 'Cards of Omen, etc.                                                                    |
+    | Auction House         | Here you can quickly check prices of things like 'True Iron Ore' etc. Prices are updated each hour based on what server you picked.                                                            |
+    |-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 
 *   Enviromental Variables
 
